--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
     </div>
     <div class="hidden">
         <img src="images/mrt.jpg" alt="Mr T" id="default">
-        
+        <div id="Player">
+            <img src="images/CubeLeft.png" alt="" id="playerLeft">
+            <img src="images/CubeRight.png" alt="" id="playerRight">
+        <div>
     </div>
+
     <!--contains functions and descriptions of commonly used mathmatical functions-->
     <script src="js/utility.js"></script>
     <!--controls.js contains the keyboard events and variables for movement-->
