--- a/index.html
+++ b/index.html
@@ -26,7 +26,26 @@
         </p>
     </div>
     <div class="hidden">
+        <div id="Player">
+            <img src="images/CubeLeft.png" alt="" id="playerLeft">
+            <img src="images/CubeRight.png" alt="" id="playerRight">
+        <div>
         <img src="images/mrt.jpg" alt="Mr T" id="default">
+        <img src="images/Brick Backround.png" alt="" id="Backround">
+        <img src="images/Ground.png" alt="" id="Ground">
+        <img src="images/Platform_XS.png" alt="" id="platformXS">
+        <img src="images/Platform_S.png" alt="" id="platformS">
+        <img src="images/Platform_M.png" alt="" id="platformM">
+        <img src="images/Platform_L.png" alt="" id="platformL">
+        <img src="images/Platform_XL.png" alt="" id="platformXL">
+        <img src="images/Platform_XXL.png" alt="" id="platformXXL">
+        <img src="images/SolidPlatform_S.png" alt="">
+        <img src="images/SolidPlatform_M.png" alt="">
+        <img src="images/solidPlatform_L.png" alt="">
+        <img src="images/SolidPlatform_XL.png" alt="">
+        <img src="images/solidPlatform_XXL.png" alt="">
+        <img src="images/WallLeft.png" alt="" id="wallleft">
+        <img src="images/WallRight.png" alt="" id="wallright">
         <div id="Player">
             <img src="images/CubeLeft.png" alt="" id="playerLeft">
             <img src="images/CubeRight.png" alt="" id="playerRight">
