--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div>
-        <h2>Platformer <span>Use the w,a,space keys to move the avatar</span></h2>
+        <h2>The Tower-Platform Final <span>Use the a,d,space keys to move the avatar</span></h2>
         <canvas width="1000" height="700"></canvas>
     </div>
    
@@ -22,6 +22,11 @@
             <li>left - a key</li>
             <li>right - d key</li>
             <li>jump - space key</li>
+            <li>Purple orb - tiny jump</li>
+            <li>Yellow orb - medium jump</li>
+            <li>Blue orb - big jump</li>
+            <li>You can only hit one orb per jump</li>
+            <li>You can jump after walking off a platform</li>
            </ul>
         </p>
     </div>
@@ -31,7 +36,7 @@
             <img src="images/CubeRight.png" alt="" id="playerRight">
         </div>
         <img src="images/mrt.jpg" alt="Mr T" id="default">
-        <img src="images/Brick Backround.png" alt="" id="Backround">
+        <img src="images/Brick Backround Final.png" alt="" id="background">
         <img src="images/Ground.png" alt="" id="Ground">
         <img src="images/Platform_XS.png" alt="" id="platformXS">
         <img src="images/Platform_S.png" alt="" id="platformS">
@@ -44,8 +49,9 @@
         <img src="images/solidPlatform_L.png" alt="" id="SolidPlatformL">
         <img src="images/SolidPlatform_XL.png" alt="" id="SolidPlatformXL">
         <img src="images/solidPlatform_XXL.png" alt="" id="SolidPlatformXXL">
-        <img src="images/WallLeft.png" alt="" id="leftwall">
-        <img src="images/WallRight.png" alt="" id="rightwall">
+        <img src="images/WallLeft.png" alt="" id="leftwallfinal">
+        <img src="images/WallRightFinal.png" alt="" id="rightwall">
+
     </div>
 
     <!--contains functions and descriptions of commonly used mathmatical functions-->
