--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <img src="images/solidPlatform_XXL.png" alt="" id="SolidPlatformXXL">
         <img src="images/WallLeft.png" alt="" id="leftwallfinal">
         <img src="images/WallRightFinal.png" alt="" id="rightwall">
-
+        <img src="images/YOU WIIN.png" alt="" id="youwin">
     </div>
 
     <!--contains functions and descriptions of commonly used mathmatical functions-->
