--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Car Game Files</title>
+    <title>The tower Platformer</title>
    
 </head>
 <body>
@@ -17,7 +17,7 @@
     <div id="instructions">
         <h2>INSTRUCTIONS</h2>
         <p>
-           <h3>Constrols</h3>
+           <h3>controls</h3>
            <ul>
             <li>left - a key</li>
             <li>right - d key</li>
