--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="instructions">
         <h2>INSTRUCTIONS</h2>
         <p>
-           <h3>controls</h3>
+           <h3>Controls</h3>
            <ul>
             <li>left - a key</li>
             <li>right - d key</li>
